<resources>
    <string name="app_name">CabDab</string>
    <string name="title_home">Home</string>
    <string name="title_history">WiFi Debugging</string>
    <string name="title_log">Log</string>
    <string name="title_in">In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Log In</string>
    <!--Used in Declaration Page -->
    <string name="title_declaration">Your Declarations</string>
    <string name="zero_percent">0%</string>
    <string name="daily_declaration">Daily Declaration</string>
    <string name="reminder_1">Reminder all day</string>
    <string name="temperature_taking">Temperature Taking</string>
    <string name="morning">1st Declaration</string>
    <string name="evening">2nd Declaration</string>
    <string name="LOG">LOG</string>


    <string name="welcome">WELCOME</string>
    <string name="bluetoothConnected">Bluetooth Connected</string>
    <string name="bluetoothDenied">Please Allow Bluetooth</string>
    <string name="bluetoothOff">Turn On Bluetooth</string>
    <string name="check_bluetooth">Check Bluetooth</string>
    <string name="user">user</string>
    <string name="places_you_frequently_visit">Places you frequently visit</string>
    <!--    <string name="location_1"><font size="12sp">location 1</font>\n\<font size="12sp">count</font></string>-->
    <string name="location_1">Location 1</string>
    <string name="location_2">Location 2</string>
    <string name="location_3">Location 3</string>
    <string name="location_4">Location 4</string>
    <string name="location_5">Location 5</string>


    <!-- For Splash Screen -->
    <string name="nextscreen">The login screen can be put here.</string>
    <string name="buttontext">How does CabDab work?</string>
    <!-- You would want these though. -->
    <string name="bluentry">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="ttsauto">Fusce ut massa sit amet odio eleifend auctor et id ex.</string>
    <string name="bluetooth1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="location">Pellentesque urna diam, egestas a tellus quis, suscipit bibendum dui. Integer at suscipit neque.</string>
    <string name="skip_button">Skip</string>
    <string name="getstarted">Get Started</string>
    <string name="next">Next</string>
    <string name="go_next">Go Next</string>
    <!-- End of Splash -->

    <!-- For History -->
    <!--Used in History Page -->
    <string name="chosen_loc_popup">Chosen Location</string>

    <string name="tab1Period">Period</string>
    <string name="tab2Place">Place</string>
    <string name="spinnerPeriod">Select</string>
    <string name="place_text">This is Place</string>
    <string name="question_mark">\?</string>
    <string name="popup_period">Help text for Period</string>
    <string name="make_easy">Home Screen</string>
    <string name="enable_bluetooth_msg"><![CDATA[Please enable your bluetooth & WiFi for location ranging]]></string>
    <string name="your_bluetooth_status">Your bluetooth status:</string>

    <string name="period_tab">About Period</string>
    <string name="period_info">Records of your check ins and outs are shown according to the date entries.</string>
    <string name="place_tab">About Place</string>
    <string name="place_info">Records of your check ins and outs are shown according to the places you have visited.</string>
    <string name="history_subheading"><![CDATA[Records your check in & out]]></string>
    <string name="about_declaration">About Declaration</string>
    <string name="chosen_popup_count">Chosen popup count</string>
    <string name="about_title">ABOUT</string>
    <string name="about_subheader">WHAT IS BLUENTRY?</string>
    <string name="declarations">Declarations</string>
    <string name="about_declarations">About Declarations</string>
    <string name="declaration_popup">Have fun colouring while you click on the \'log\' buttons to do your daily declarations and temperature takings. A reminder will be sent to you at 3.15pm in case you forget!</string>
    <string-array name = "date">
        <item>Today</item>
        <item>1 week</item>
        <item>1 month</item>
        <item>3 months</item>
    </string-array>
</resources>