<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPageActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extrabold"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="120dp"
            android:text="@string/title_log"
            android:textColor="#000000"
            android:textSize="40sp"
            />

        <TextView
            android:id="@+id/title_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extrabold"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="120dp"
            android:text="@string/title_in"
            android:textColor="@color/lightblue"
            android:textSize="40sp"
            />

    </LinearLayout>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textSize="25sp"
        android:hint="@string/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textSize="25sp"
        android:hint="@string/password"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/round_button"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/fake_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/round_button"
        android:text="About"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>


    <include layout="@layout/include_progress_overlay"/>


</FrameLayout>
