<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/topIcons"
        android:layout_width="wrap_content"
        android:layout_height="70dp">

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_menu"
            android:padding="7dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/welcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="@font/open_sans_bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/make_easy"
            android:textColor="#000000"
            android:textSize="30sp"
            app:fontFamily="@font/open_sans_semibold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/enable_bluetooth_msg"
            android:textColor="#000000"
            android:textSize="15sp"
            app:fontFamily="@font/open_sans_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <!--           Bluetooth status-->
        <FrameLayout
            android:id="@+id/bluetooth_circle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/circle_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/your_bluetooth_status"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    app:fontFamily="@font/open_sans_semibold" />

                <Button
                    android:id="@+id/bluetoothStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bluetooth_rounded_corner"
                    android:fontFamily="@font/open_sans_bold"
                    android:paddingLeft="20dp"
                    android:paddingTop="4dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:text="@string/check_bluetooth"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_line_top" />


    <!--    Scrolling view for frequently visited places-->
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/freqPlaces"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/location_round_corner"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:paddingHorizontal="3dp"
                android:text="@string/places_you_frequently_visit"
                android:textColor="#000000"
                android:textSize="12sp" />

            <!--            Frequently visited location 1-->
            <FrameLayout
                android:id="@+id/frame_1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageButton
                    android:id="@+id/location_1_button"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/location_1" />

                <TextView
                    android:id="@+id/location_1_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="3dp"
                    android:text="@string/location_1"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_1_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="25"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </FrameLayout>

            <!--            Frequently visited location 2-->
            <FrameLayout
                android:id="@+id/frame_2"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageButton
                    android:id="@+id/location_2_button"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/location_2" />

                <TextView
                    android:id="@+id/location_2_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="3dp"
                    android:text="@string/location_2"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_2_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="25"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </FrameLayout>

            <!--            Frequently visited location 3-->
            <FrameLayout
                android:id="@+id/frame_3"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageButton
                    android:id="@+id/location_3_button"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/location_3" />

                <TextView
                    android:id="@+id/location_3_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="3dp"
                    android:text="@string/location_3"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_3_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="25"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </FrameLayout>


            <!--            Frequently visited location 4-->
            <FrameLayout
                android:id="@+id/frame_4"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageButton
                    android:id="@+id/location_4_button"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/location_4" />

                <TextView
                    android:id="@+id/location_4_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="3dp"
                    android:text="@string/location_4"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_4_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="25"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </FrameLayout>

            <!--            Frequently visited location 5-->
            <FrameLayout
                android:id="@+id/frame_5"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageButton
                    android:id="@+id/location_5_button"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/location_5" />

                <TextView
                    android:id="@+id/location_5_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="3dp"
                    android:text="@string/location_5"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/location_5_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="25"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </FrameLayout>
        </LinearLayout>
    </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
