<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <RelativeLayout
        android:id="@+id/topIcons"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="70dp">

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_menu"
            android:padding="7dp"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:fontFamily="@font/open_sans_semibold"
        android:text="@string/title_history"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf= "@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/history_subheading"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="15sp"
        app:fontFamily="@font/open_sans_light"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.8" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1Period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1Period" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2Place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2Place" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"/>

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="140dp"-->
    <!--        android:layout_height="34dp"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/heading_1"-->
    <!--        android:textColor="#000000"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/tabLayout"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView2"-->
    <!--        android:layout_width="71dp"-->
    <!--        android:layout_height="34dp"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/app_name"-->
    <!--        android:textColor="#4C5EBD"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/tabLayout"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/textView"-->
    <!--        app:layout_constraintVertical_bias="0.657" />-->

    <!--    <Spinner-->
    <!--        android:id="@+id/spinnerPeriod"-->
    <!--        android:layout_width="170dp"-->
    <!--        android:layout_height="38dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:background="@android:drawable/btn_dropdown"-->
    <!--        android:dropDownSelector="@android:drawable/arrow_down_float"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/spinnerPeriod"-->
    <!--        android:textColor="#4C5EBD"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.882"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tabLayout"-->
    <!--        app:layout_constraintVertical_bias="0.0"-->
    <!--        tools:visibility="visible" />-->

    <!--&lt;!&ndash;    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_height="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:orientation="vertical">&ndash;&gt;-->
    <!--&lt;!&ndash;    <include layout="@layout/app_bar" />&ndash;&gt;-->

    <!--    <android.support.v7.widget.RecyclerView-->
    <!--        android:id="@+id/recyclerView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->
    <!--    </android.support.v7.widget.RecyclerView>-->



</androidx.constraintlayout.widget.ConstraintLayout>